[gd_scene load_steps=6 format=3]

[ext_resource type="PackedScene" path="res://UI/Layers/LayerConfiguration/Misc/ColorButton.tscn" id="1"]
[ext_resource type="FontFile" path="res://UI/Fonts/TextBold.tres" id="2"]
[ext_resource type="Script" path="res://UI/Layers/LayerConfiguration/SpecificLayerCompositionUI/Basic_terrainLayer.gd" id="3"]
[ext_resource type="PackedScene" path="res://UI/Layers/LayerConfiguration/Misc/GeodataChooser.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Util/Warning.tscn" id="5"]

[node name="TerrainLayer" type="HSplitContainer"]
offset_right = 1024.0
offset_bottom = 320.0
minimum_size = Vector2( 0, 320 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="."]
offset_right = 133.0
offset_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="LeftBox"]
offset_right = 133.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="Title" type="Label" parent="LeftBox/Title"]
offset_right = 133.0
offset_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Terrain-Layer"

[node name="HSeparator" type="HSeparator" parent="LeftBox/Title"]
offset_top = 31.0
offset_right = 133.0
offset_bottom = 39.0

[node name="Height" type="Label" parent="LeftBox"]
offset_top = 58.0
offset_right = 133.0
offset_bottom = 143.0
minimum_size = Vector2( 0, 85 )
text = "Height-data:"

[node name="Texture2D" type="Label" parent="LeftBox"]
offset_top = 151.0
offset_right = 133.0
offset_bottom = 236.0
minimum_size = Vector2( 0, 85 )
text = "Texture2D:"

[node name="ColorCode" type="Label" parent="LeftBox"]
offset_top = 244.0
offset_right = 133.0
offset_bottom = 294.0
minimum_size = Vector2( 0, 50 )
text = "Color code:"

[node name="ColorShading" type="VBoxContainer" parent="LeftBox"]
visible = false
offset_top = 302.0
offset_right = 180.0
offset_bottom = 570.0

[node name="MinVal" type="Label" parent="LeftBox/ColorShading"]
offset_right = 180.0
offset_bottom = 45.0
minimum_size = Vector2( 0, 45 )
text = "Minimum value:"

[node name="ColorMin" type="Label" parent="LeftBox/ColorShading"]
offset_top = 53.0
offset_right = 180.0
offset_bottom = 98.0
minimum_size = Vector2( 0, 45 )
text = "Color min: "

[node name="MaxVal" type="Label" parent="LeftBox/ColorShading"]
offset_top = 106.0
offset_right = 180.0
offset_bottom = 151.0
minimum_size = Vector2( 0, 45 )
text = "Maximum value:"

[node name="ColorMax" type="Label" parent="LeftBox/ColorShading"]
offset_top = 159.0
offset_right = 180.0
offset_bottom = 204.0
minimum_size = Vector2( 0, 45 )
text = "Color max:"

[node name="Alpha" type="Label" parent="LeftBox/ColorShading"]
offset_top = 212.0
offset_right = 180.0
offset_bottom = 268.0
minimum_size = Vector2( 0, 45 )
text = "Alpha:
"

[node name="RightBox" type="VBoxContainer" parent="."]
offset_left = 157.0
offset_right = 1024.0
offset_bottom = 320.0

[node name="Control" type="Control" parent="RightBox"]
offset_right = 867.0
offset_bottom = 50.0
minimum_size = Vector2( 0, 50 )

[node name="GeodataChooserHeight" parent="RightBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 58.0
offset_right = 867.0
offset_bottom = 143.0
show_feature_layer = false

[node name="GeodataChooserTexture" parent="RightBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 151.0
offset_right = 867.0
offset_bottom = 236.0
show_feature_layer = false

[node name="CheckBox" type="CheckBox" parent="RightBox"]
offset_top = 244.0
offset_right = 48.0
offset_bottom = 292.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorShading" type="VBoxContainer" parent="RightBox"]
visible = false
offset_top = 300.0
offset_right = 867.0
offset_bottom = 557.0

[node name="MinVal" type="SpinBox" parent="RightBox/ColorShading"]
offset_right = 196.0
offset_bottom = 45.0
minimum_size = Vector2( 0, 45 )
size_flags_horizontal = 0
min_value = -999999.0
max_value = 999999.0
value = 1.0

[node name="ButtonMin" parent="RightBox/ColorShading" instance=ExtResource( 1 )]
offset_top = 53.0
offset_right = 45.0
offset_bottom = 98.0
minimum_size = Vector2( 45, 45 )
size_flags_horizontal = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="RightBox/ColorShading/ButtonMin"]
offset_right = 669.0
offset_bottom = 997.0

[node name="ColorPicker" type="ColorPicker" parent="RightBox/ColorShading/ButtonMin/ConfirmationDialog"]
offset_left = 16.0
offset_top = 16.0
offset_right = 653.0
offset_bottom = 928.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxVal" type="SpinBox" parent="RightBox/ColorShading"]
offset_top = 106.0
offset_right = 196.0
offset_bottom = 151.0
minimum_size = Vector2( 0, 45 )
size_flags_horizontal = 0
min_value = -999999.0
max_value = 999999.0
value = 1.0

[node name="ButtonMax" parent="RightBox/ColorShading" instance=ExtResource( 1 )]
offset_top = 159.0
offset_right = 45.0
offset_bottom = 204.0
minimum_size = Vector2( 45, 45 )
size_flags_horizontal = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="RightBox/ColorShading/ButtonMax"]
offset_left = -13.4696
offset_top = -44.8984
offset_right = 655.53
offset_bottom = 952.102

[node name="ColorPicker" type="ColorPicker" parent="RightBox/ColorShading/ButtonMax/ConfirmationDialog"]
offset_left = 16.0
offset_top = 16.0
offset_right = 653.0
offset_bottom = 928.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlphaSpinBox" type="SpinBox" parent="RightBox/ColorShading"]
offset_top = 212.0
offset_right = 196.0
offset_bottom = 257.0
minimum_size = Vector2( 45, 45 )
size_flags_horizontal = 0
max_value = 1.0
step = 0.05
value = 1.0

[node name="Warning" parent="RightBox" instance=ExtResource( 5 )]
visible = false
offset_top = 353.0
offset_bottom = 391.0
